--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
   "browser_action": {
     "default_title": "music",
-    "default_icon": "icon.png",
+    "default_icon": "icon_new.png",
     "default_popup": "popup.html"
   },
   "permissions" : [//向浏览器申请的权限
